iml-wasm-components/iml-action-dropdown/src/snapshots/tests__locks_list.snap
---
created: "2019-05-29T12:46:13.582337Z"
creator: insta@0.8.1
source: iml-action-dropdown/src/api_transforms.rs
expression: xs
---
[
    LockChange {
        job_id: 53,
        content_type_id: 61,
        item_id: 1,
        description: "Shut down the LNet networking layer and stop any targets running on this server.",
        lock_type: Write,
        action: Add,
    },
]
